tests/ui/async-await/async-closures/not-lending.stderr
error: lifetime may not live long enough
  --> $DIR/not-lending.rs:12:42
   |
LL |         let x = async move || -> &String { &s };
   |                 ------------------------ ^^^^^^ returning this value requires that `'1` must outlive `'2`
   |                 |                |
   |                 |                let's call the lifetime of this reference `'2`
   |                 lifetime `'1` represents this closure's body
   |
   = note: closure implements `AsyncFn`, so references to captured variables can't escape the closure

error: lifetime may not live long enough
  --> $DIR/not-lending.rs:16:31
   |
LL |         let x = async move || { &s };
   |                 ------------- ^^^^^^ returning this value requires that `'1` must outlive `'2`
   |                 |           |
   |                 |           return type of async closure is &'2 String
   |                 lifetime `'1` represents this closure's body
   |
   = note: closure implements `AsyncFn`, so references to captured variables can't escape the closure

error: aborting due to 2 previous errors

